<resources>
    <string name="app_name">Vestel JIRA Mobile</string>

    <string name="senderId">453533184280</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_project_label">Project :</string>
    <string name="search_assignee_label">Assignee :</string>
    <string name="search_reporter_label">Reporter :</string>
    <string name="search_issueType_label">Issue Type :</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_new_issue">Create New Issue</string>
    <string name="action_search_for_issue">Search For Issue</string>

    <string name="activity_stream_header"><u>Recent Activities in JIRA</u></string>
    <string name="assigned_to_me_header"><u>Assigned Issues To Me</u></string>
    <string name="reported_to_me_header"><u>Reported Issues To Me</u></string>
    <string name="search_header"><u>Search For Issues in JIRA</u></string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="app_logo_description">Application Logo</string>
    <string name="recent_activities_label">Recent Activities</string>
    <string name="create_issue_label">Create New Issue</string>
    <string name="assigned_to_me_label">Assigned To Me</string>
    <string name="reported_by_me_label">Reported By Me</string>
    <string name="search_for_issues_label">Search For Issues</string>
    <string name="about_label">About</string>
    <string name="log_out_label">Log Out</string>
    <string name="user_avatar_logo_desc">User Avatar</string>
    <string name="welcome_note">Welcome To JIRA Mobile</string>
    <string name="user_full_name_info">User Full Name</string>
    <string name="search_for_issues_title"><u>Please Select Search Criteria</u></string>
    <string name="project_ac_hint">Project</string>
    <string name="assignee_ac_hint">Assignee</string>
    <string name="reporter_ac_hint">Reporter</string>
    <string name="issuetype_ac_hint">Issue Type</string>
    <string name="priority_ac_hint">Priority</string>
    <string name="status_ac_hint">Status</string>
    <string name="description_ac_hint">Description</string>
    <string name="summary_ac_hint">Summary</string>
    <string name="start_date_ac_hint">Start Date</string>
    <string name="end_date_ac_hint">End Date</string>
    <string name="no_items_info">No Items</string>
    <string name="favourite_filters_label">My Favourite Filters</string>
    <string name="close_message">Are you sure ?</string>
    <string name="close_message_title">Close Vestel JIRA Mobile</string>
    <string name="description_hint">Description</string>
    <string name="add_comment_hint">Add Your Comment...</string>
    <string name="add_comment">Add Comment</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

</resources>
