<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/searchHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_header"
        android:textSize="15dip"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/projectLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/projectLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_weight="65"
            android:text="@string/search_project_label" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/projectAutoComplete"
            android:layout_weight="35"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/assigneeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/assigneeLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_weight="65"
            android:text="@string/search_assignee_label" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/assigneeAutoComplete"
            android:layout_weight="35"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/issueTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/issueTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_weight="65"
            android:text="@string/search_issueType_label" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/issueTypeAutoComplete"
            android:layout_weight="35"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reporterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/reporterLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_weight="65"
            android:text="@string/search_reporter_label" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/reporterAutoComplete"
            android:layout_weight="35"/>

    </LinearLayout>

</LinearLayout>