<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/mainLayout"
    android:background="@drawable/back">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <ImageView
            android:src="@drawable/jiramobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo_description">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username_hint"
                android:text="batuhanka"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:text="150201036"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </LinearLayout>
        
        <!--&lt;!&ndash; Username Label &ndash;&gt;-->
            <!--<EditText-->
                <!--android:id="@+id/username_field"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPersonName"-->
                <!--android:hint="@string/username_hint"-->
                <!--android:text="batuhanka"-->
                <!--android:textColor="#ffffff"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp"/>-->


        <!--&lt;!&ndash; Password Label &ndash;&gt;-->
            <!--<EditText-->
                <!--android:id="@+id/password_field"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword"-->
                <!--android:hint="@string/password_hint"-->
                <!--android:text="150201036"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="#ffffff"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/login_text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


        </LinearLayout>

        <!--<Button-->
            <!--android:id="@+id/signin_btn"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:padding="12dp"-->
            <!--android:text="@string/login_text"/>-->


    </LinearLayout>
</ScrollView>